--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                       <i class="fa fa-cubes"></i><!-- Icon -->
                     </div>
                     <h2>Sistemas a Medida</h2><!-- Title -->
-                    <p>Tu negocio debe tener debe poseer una plataforma informática, tan necesaria para el éxito comercial como la contabilidad, finanzas, administración o marketing. Además, al agrupar los datos, los clientes también son favorecidos a través de la eficacia y velocidad potenciada en la organización.</p><!-- Description -->
+                    <p>Tu negocio debe tener una plataforma informática, tan necesaria para el éxito comercial como la contabilidad, finanzas, administración o marketing. Además, al agrupar los datos, los clientes también son favorecidos a través de la eficacia y velocidad potenciada en la organización.</p><!-- Description -->
                   </div>
           </div>
                   <div class="clearfix"></div>
