--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
               <div class="col-md-12">
                 <ul class="social-buttons">
                   <li><a href="https://www.facebook.com/gaston.viotti.1/" class="social-btn"><i class="fa fa-facebook"></i></a></li><!-- facebook -->
-				  <li><a href="https://www.instagram.com/gaston.viotti87/?hl=es-la" class="social-btn"><i class="fa fa-instagram"></i></a></li><!-- youtube -->
+				  <li><a href="" class="social-btn"><i class="fa fa-instagram"></i></a></li><!-- youtube -->
                 </ul>
               </div>
             </div>
